--- a/app/globals.css
+++ b/app/globals.css
@@ -217,9 +217,6 @@ input {
 
 /*=============== HOME ===============*/
 
-.image-brightness {
-  filter: brightness(65%);
-}
 
 .home__container {
   position: relative;
@@ -228,6 +225,17 @@ input {
   row-gap: 3rem;
 }
 
+.image-brightness {
+  filter: brightness(65%);
+}
+
+.bg-home {
+  background-image: url(./../public/images/hero.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+  background-color: gray;
+}
 .home__info-button {
   font-size: var(--smaller-font-size);
 }
@@ -271,7 +279,10 @@ input {
   background: none;
 }
 
-/*=============== ABOUT ===============*/
+/*=============== DEAL ===============*/
+.deal__container {
+  row-gap: 2.5rem;
+}
 .transition-100 {
   transition: 0.3s;
 }
@@ -279,7 +290,7 @@ input {
   transform: scale(1.1);
 }
 
-/*=============== PRODUCT PLACE ===============*/
+/*=============== PRODUCT ===============*/
 
 .product__container {
   grid-template-columns: repeat(2, max-content);
@@ -482,10 +493,6 @@ input {
     align-self: flex-end;
     margin-bottom: 3rem;
     column-gap: 2.5rem;
-  }
-  
-  .product__container {
-    padding-top: 2rem;
   }
 
   .bg-none {
